task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: task7-ns
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
  ingress: [ ]
  egress: [ ]

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
  namespace: task7-ns
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
  namespace: task7-ns
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
